--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.5",
     "@primeng/themes": "^19.0.10",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
